finished todos in background + fixed accents

--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -68,7 +68,7 @@ This thesis concerns applications of machine learning to radio astronomy for the
     \end{itemize}
 
 
-\section{Thesis Outline}
+\section{Thesis outline}
 \label{sec:outline}
 
 We begin by introducing key concepts from radio astronomy in \autoref{cha:background}, including radio active galactic nuclei (AGN), as well as motivations for and difficulties in cross-identifying observed radio emission from AGN. \autoref{cha:background-ml} introduces machine learning and describes the machine learning background required for the remainder of the thesis. These chapters together comprise the introduction.
@@ -85,4 +85,22 @@ My main contributions to radio astroinformatics in this thesis are:
     \item I produce a fractional radio luminosity function with divisions based on mid-infrared colours associated with the host galaxies of the radio emission, helping to understand how radio galaxies evolve throughout the Universe;
     \item I highlight the requirement of considerably more redshifts in understanding future wide-area radio surveys; and
     \item I introduce a new method to identify Faraday complexity using an interpretable classifier, as well as features for Faraday dispersion functions which can be used for other machine learning tasks.
+\end{itemize}
+
+\newpage
+
+\section{Works produced during this PhD}
+\label{sec:works}
+
+During my PhD, I had the good fortune to collaborate with many talented authors and contribute to a number of related works. The following is a list of papers which I co-authored in this time:
+
+\begin{itemize}
+    \item \emph{Radio Galaxy Zoo: Machine learning for radio source host galaxy cross-identification}, by \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, L. Rudnick, O. I. Wong, C. Wolf, H. Andernach, R. P. Norris, and S. S. Shabala. Published in 2018 in \emph{Monthly Notices of the Royal Astronomy Society}.
+    \item \emph{Radio Galaxy Zoo: Radio luminosity functions of extended sources}, by \textbf{M. J. Alger}, O. I. Wong, C. S. Ong, N. M. McClure-Griffiths, H. Andernach, L. Rudnick, S. S. Shabala, A. F. Garon, J. K. Banfield, A. D. Kapi\'nska, R. P. Norris, and A. J. M. Thomson. Not yet submitted.
+    \item \emph{Interpretable Faraday Complexity Classification}, by \textbf{M. J. Alger}, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo., O. I. Wong, and C. S. Ong. To be published in \emph{Publications of the Astronomical Society of Australia}.
+    \item \emph{Radio Galaxy Zoo Data Release 1: visual identification of 75,641 radio morphologies from the FIRST and ATLAS surveys}, by O. I. Wong, A. F. Garon, \textbf{M. J. Alger}, K. W. Willett, L. Rudnick, J. K. Banfield, J. Swan, S. S. Shabala, H. Andernach, R. P. Norris, B. D. Simmons, A. D. Kapi\'nska, N. Seymour, et al. Not yet submitted.
+    \item \emph{Radio Galaxy Zoo: CLARAN - a deep learning classifier for radio morphologies}, by C. Wu, O. I. Wong, L. Rudnick, S. S. Shabala, \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, S. V. White, A. F. Garon, R. P. Norris, H. Andernach, J. Tate, V. Lukic, H. Tang, K. Schawinski, F. I. Diakogiannis. Published in 2019 in \emph{Monthly Notices of the Royal Astronomy Society}.
+    \item \emph{Heightened Faraday Complexity in the inner 1 kpc of the Galactic Centre}, by J. D. Livingston, N. M. McClure-Griffiths, B. M. Gaensler, A. Seta, \textbf{M. J. Alger}. Published in 2021 in \emph{Monthly Notices of the Royal Astronomy Society}.
+    \item \emph{Radio Galaxy Zoo: Unsupervised Clustering of Convolutionally Auto-encoded Radio-astronomical Images}, by N. O. Ralph, R. P. Norris, G. Fang, L. A. F. Park, T. J. Galvin, \textbf{M. J. Alger}, H. Andernach, C. Lintott, L. Rudnick, S. S. Shabala, and O. I. Wong. Published in 2019 in \emph{Publications of the Astronomical Society of the Pacific}.
+    \item \emph{Radio Galaxy Zoo: Knowledge Transfer Using Rotationally Invariant Self-organizing Maps}, by T. J. Galvin, M. Huynh, R. P. Norris, X. R. Wang, E. Hopkins, O. I. Wong, S. S. Shabala, L. Rudnick, \textbf{M. J. Alger}, and K. L. Polsterer. Published in 2019 in \emph{Publications of the Astronomical Society of the Pacific}.
 \end{itemize}
