--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -63,6 +63,14 @@
 
 \usepackage{subcaption}
 
+\usepackage{fontspec}
+
+
+\setmainfont{TeX Gyre Pagella}
+% \UndeclareUTFcomposite[\UTFencname]{x017B}{\.}{Z}
+% \usepackage{newunicodechar}
+% \newunicodechar{ǎ}{\accent\string"02C7 a}
+
 % Thesis style guide:
 % https://policies.anu.edu.au/ppl/document/ANUP_012815
 
